# MusicPlayer_demo

./: BackgroundManager.qml  BackgroundManager.qml.autosave  BottomBar.qml  BottomBar.qml.autosave  BottomBarVolumeBtn.qml  BottomBarVolumeBtn.qml.autosave  BottomImage.qml  CMakeLists.txt  DeskTopLyric.qml  DownloadButton.qml  LeftBar.qml  LyricListView.qml  MusicPlayer.qml  MusicResource.qml  MusicResource.qml.autosave  NewMusicContent.qml  NewMusicContent.qml.autosave  PageDownload.qml  PageDownload.qml.autosave  PageFavoriteMusicDetail.qml  PageFindMusic.qml  PageLocalMusic.qml  PageMusicLyricDetail.qml  PagePlayHistory.qml  PageSearchResult.qml  PageThemeChoose.qml  PlayListContent.qml  PlayListContent.qml.autosave  PlayListDetail.qml  PlayListLable.qml  PlayerImage.qml  README.md  RightContent.qml  RoundImage.qml  TextButton.qml  ThemeButton.qml  ThemeImage.qml  ThemePreviewIcon.qml  ThisPlayerListLabel.qml  TitleBar.qml  (+32 more)
